deploy: afc05c0db1aa73989188cf27168084d2c6796dc7

--- a/Labs/Introduction.html
+++ b/Labs/Introduction.html
@@ -153,12 +153,12 @@
 <td>
 <p>The mdBook accessed outside of blackboard and is mobile and tablet friendly. :</p>
 <ul>
-<li><a href="https://github.com/cccu-uk/U10814_NOS_Labs">https://github.com/cccu-uk/U10814_NOS_Labs</a></li>
+<li><a href="https://github.com/cccu-uk/U10814_NOS_Exercises">https://github.com/cccu-uk/U10814_NOS_Exercises</a></li>
 <li>Or scan the QR code on the right:</li>
 </ul>
 </td>
 <td>
-<p><a rel='nofollow' href='https://www.qr-code-generator.com' border='-1' style='cursor:default'><img src='https://chart.googleapis.com/chart?cht=qr&chl=https%3A%2F%2Fgithub.com%2Fcccu-uk%2FU10814_NOS_Labs&chs=180x180&choe=UTF-8&chld=L|2' alt=''></a></p>
+<p><img src="https://chart.googleapis.com/chart?cht=qr&chl=https%4A%2F%2Fgithub.com%2Fcccu-uk%2FU10814_NOS_Exercises&chs=180x180&choe=UTF-8&chld=L|2" rel="nofollow" alt="qr code"><a href="www.qr-code-generator.com/" border="0" style="cursor:default" rel="nofollow"></a></p>
 </td>
 </tr>
 </table>
