--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="labs"><a class="header" href="#labs">Labs</a></h1>
+                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
+<p>This mdBook will grow over the duration of this module with new labs/workshops and general content needed to test and increase your knowledge of NOS. </p>
 <table>
 <tr>
 <td>
@@ -162,6 +163,41 @@
 </td>
 </tr>
 </table>
+<h2 id="accessibility-and-navigation"><a class="header" href="#accessibility-and-navigation">Accessibility and Navigation</a></h2>
+<p>There are several methods for navigating through the chapters (i.e., sessions).</p>
+<p>The <strong>sidebar</strong> on the left provides a list of all chapters/sessions.
+Clicking on any of the chapter/session titles will load that page.</p>
+<p>The sidebar may not automatically appear if the window is too narrow, particularly on mobile displays.
+In that situation, the menu icon (<i class="fa fa-bars"></i>) at the top-left of the page can be pressed to open and close the sidebar.</p>
+<p>The <strong>arrow buttons</strong> at the bottom of the page can be used to navigate to the previous or the next chapter.</p>
+<p>The <strong>left and right arrow keys</strong> on the keyboard can be used to navigate to the previous or the next chapter.</p>
+<h3 id="top-menu-bar"><a class="header" href="#top-menu-bar">Top menu bar</a></h3>
+<p>The menu bar at the top of the page provides some icons for interacting with the book.
+The icons displayed will depend on the settings of how the book was generated.</p>
+<table><thead><tr><th>Icon</th><th>Description</th></tr></thead><tbody>
+<tr><td><i class="fa fa-bars"></i></td><td>Opens and closes the chapter listing sidebar.</td></tr>
+<tr><td><i class="fa fa-paint-brush"></i></td><td>Opens a picker to choose a different color theme.</td></tr>
+<tr><td><i class="fa fa-search"></i></td><td>Opens a search bar for searching within the book.</td></tr>
+<tr><td><i class="fa fa-print"></i></td><td>Instructs the web browser to print the entire book.</td></tr>
+<tr><td><i class="fa fa-github"></i></td><td>Opens a link to the website that hosts the source code of the book.</td></tr>
+<tr><td><i class="fa fa-edit"></i></td><td>Opens a page to directly edit the source of the page you are currently reading.</td></tr>
+</tbody></table>
+<p>Tapping the menu bar will scroll the page to the top.</p>
+<h3 id="search"><a class="header" href="#search">Search</a></h3>
+<p>Each book has a built-in search system.
+Pressing the search icon (<i class="fa fa-search"></i>) in the menu bar, or pressing the <code>S</code> key on the keyboard will open an input box for entering search terms.
+Typing some terms will show matching chapters and sections in real time.</p>
+<p>Clicking any of the results will jump to that section.
+The up and down arrow keys can be used to navigate the results, and enter will open the highlighted section.</p>
+<p>After loading a search result, the matching search terms will be highlighted in the text.
+Clicking a highlighted word or pressing the <code>Esc</code> key will remove the highlighting.</p>
+<p>You have the ability to change the theme of the mdBook by clicking the  icon on the top left mdBook. Additionally, there is a toggle for the table of content, and a search tool.</p>
+<h2 id="issues"><a class="header" href="#issues">Issues</a></h2>
+<p>If you notice a mistake you can notify the module team who can make the correction. You may be instructed to raise an actual github issue. </p>
+<h2 id="printing"><a class="header" href="#printing">Printing</a></h2>
+<p>Currently the mdBook is approximately 60+ pages, and the environmental impact per page ~10.2L water, 2g CO\(_2\) and 2g wood. Therefore, ~600L water, 120g CO\(_2\) and 120g wood would be needed to produce a paper copy of this mdBook.</p>
+<p>The environmental effects of paper production include deforestation, the use of enormous amounts of energy and water as well as air pollution and waste problems. Paper accounts for around 26% of total waste at landfills</p>
+<p>Therefore, please print only if this is really necessary.</p>
 
                     </main>
 
