--- a/Labs/Introduction.html
+++ b/Labs/Introduction.html
@@ -163,6 +163,15 @@
 </td>
 </tr>
 </table>
+<h2 id="links"><a class="header" href="#links">Links</a></h2>
+<ul>
+<li>
+<p><a href="www.gitpod.io">Gitpod</a></p>
+</li>
+<li>
+<p><a href="www.github.com">Github</a></p>
+</li>
+</ul>
 <h2 id="accessibility-and-navigation"><a class="header" href="#accessibility-and-navigation">Accessibility and Navigation</a></h2>
 <p>There are several methods for navigating through the chapters (i.e., sessions).</p>
 <p>The <strong>sidebar</strong> on the left provides a list of all chapters/sessions.
