--- a/Multi-ThreadedScripting-ProcessManagement/Multi-ThreadedScripting-ProcessManagement.html
+++ b/Multi-ThreadedScripting-ProcessManagement/Multi-ThreadedScripting-ProcessManagement.html
@@ -171,7 +171,7 @@
 <p><strong>Important</strong></p>
 <blockquote>
 <ul>
-<li>Go to Jupyter Hub <a href="https://jupyterhub-dev.canterbury.ac.uk/">https://jupyterhub-dev.canterbury.ac.uk/</a> and open a terminal.</li>
+<li>Go to Jupyter Hub <a href="https://jupyterhub.canterbury.ac.uk/hub/spawn">https://jupyterhub.canterbury.ac.uk/hub/spawn</a> and open a terminal.</li>
 <li>or if you have your own linux CLI open one up.</li>
 </ul>
 </blockquote>
