deploy: 4c39271ca5909c4db2aec1b8cbb27eaf0b31a522

--- a/Multi-ThreadedScripting-ProcessManagement/Multi-ThreadedScripting-ProcessManagement.html
+++ b/Multi-ThreadedScripting-ProcessManagement/Multi-ThreadedScripting-ProcessManagement.html
@@ -214,7 +214,7 @@ $
 <li>Finally you exited from the subshell via exit and returned to the parent subshell! </li>
 </ol>
 </details>
-<p>Run again but this time append <code>echo</code> with <code>$</code> you will see proof of this, your PIDs may differ.</p>
+<p>Run again but this time append <code>echo</code> with <code>$$</code> you will see proof of this, your PIDs may differ.</p>
 <pre><code class="language-sh">$ echo $$
 220250
 </code></pre>
