--- a/SystemCalls/SystemCalls.html
+++ b/SystemCalls/SystemCalls.html
@@ -508,12 +508,39 @@ parent process: pid = 404
 <p>Create a new file called <code>signals.c</code></p>
 <pre><code class="language-sh">nano signals.c
 </code></pre>
-<p>Compile and run:</p>
-<pre><code class="language-sh">gcc signals.c -o signals &amp;&amp; ./signals
-</code></pre>
-<p>Remember to press <code>ctrl</code>+<code>c</code> to interact and do it a second time to close the program.</p>
-<p>Output:</p>
-<pre><code class="language-sh">/signals
+<pre><code class="language-c">#include &lt;stdio.h&gt;
+#include &lt;unistd.h&gt;
+#include &lt;signal.h&gt;
+
+void my_signal_interrupt(int sig)
+{
+  printf(&quot;I got signal %d\n&quot;, sig);
+  (void) signal(SIGINT, SIG_DFL);
+}
+
+int main()
+{
+  (void) signal(SIGINT,my_signal_interrupt);
+
+  while(1) {
+      printf(&quot;Waiting for interruption...\n&quot;);
+      sleep(1);
+  }
+}
+```
+
+Compile and run:
+
+```sh
+gcc signals.c -o signals &amp;&amp; ./signals
+```
+
+Remember to press `ctrl`+`c` to interact and do it a second time to close the program.
+
+Output:
+
+```sh
+/signals
 Waiting for interruption...
 Waiting for interruption...
 Waiting for interruption...
@@ -528,41 +555,49 @@ Waiting for interruption...
 Waiting for interruption...
 Waiting for interruption...
 
+```
+
+The `my_signal_interrupt()` is called when we give `SIGINT` signal by typing `ctrl+C`. After the interrupt function `my_signal_interrupt()` has completed, the program moves on, but the signal action is restored to the default. So, when it gets a second `SIGINT` signal, the program takes the default action, which is terminating the program.
+
+## Signals Look up
+
+
+
+|Signal	|Name|	Description|
+|---|----|---|
+|`SIGHUP`	   |1	| Hangup (POSIX)|
+|`SIGINT`	   |2	| Terminal interrupt (ANSI)|
+|`SIGQUIT`	 |3	| Terminal quit (POSIX)|
+|`SIGILL`	   |4	| Illegal instruction (ANSI)|
+|`SIGTRAP`	 |5	| Trace trap (POSIX)|
+|`SIGIOT`	   |6	| IOT Trap (4.2 BSD)|
+|`SIGBUS`	   |7	| BUS error (4.2 BSD)|
+|`SIGFPE`	   |8	| Floating point exception (ANSI)|
+|`SIGKILL`	 |9	| Kill(can't be caught or ignored) (POSIX)|
+|`SIGUSR1`	 |10| 	User defined signal 1 (POSIX)|
+|`SIGSEGV`	 |11| 	Invalid memory segment access (ANSI)|
+|`SIGUSR2`	 |12| 	User defined signal 2 (POSIX)|
+|`SIGPIPE`	 |13| 	Write on a pipe with no reader, Broken pipe (POSIX)|
+|`SIGALRM`	 |14| 	Alarm clock (POSIX)|
+|`SIGTERM`	 |15| 	Termination (ANSI)|
+|`SIGSTKFLT` |16| 	Stack fault|
+|`SIGCHLD`	 |17| 	Child process has stopped or exited, changed (POSIX)|
+|`SIGCONT`	 |18| 	Continue executing, if stopped (POSIX)|
+|`SIGSTOP`	 |19| 	Stop executing(can't be caught or ignored) (POSIX)|
+|`SIGTSTP`	 |20| 	Terminal stop signal (POSIX)|
+|`SIGTTIN` |21| 	Background process trying to read, from TTY (POSIX)|
+|`SIGTTOU`	 |22| 	Background process trying to write, to TTY (POSIX)|
+|`SIGURG`	   |23| 	Urgent condition on socket (4.2 BSD)|
+|`SIGXCPU`	 |24| 	CPU limit exceeded (4.2 BSD)|
+|`SIGXFSZ`	 |25| 	File size limit exceeded (4.2 BSD)|
+|`SIGVTALRM` |26| 	Virtual alarm clock (4.2 BSD)|
+|`SIGPROF`	 |27| 	Profiling alarm clock (4.2 BSD)|
+|`SIGWINCH`	 |28| 	Window size change (4.3 BSD, Sun)|
+|`SIGIO`	   |29| 	I/O now possible (4.2 BSD)|
+|`SIGPWR`	   |30| 	Power failure restart (System V)|
+
+
 </code></pre>
-<p>The <code>my_signal_interrupt()</code> is called when we give <code>SIGINT</code> signal by typing <code>ctrl+C</code>. After the interrupt function <code>my_signal_interrupt()</code> has completed, the program moves on, but the signal action is restored to the default. So, when it gets a second <code>SIGINT</code> signal, the program takes the default action, which is terminating the program.</p>
-<h2 id="signals-look-up"><a class="header" href="#signals-look-up">Signals Look up</a></h2>
-<table><thead><tr><th>Signal</th><th>Name</th><th>Description</th></tr></thead><tbody>
-<tr><td><code>SIGHUP</code></td><td>1</td><td>Hangup (POSIX)</td></tr>
-<tr><td><code>SIGINT</code></td><td>2</td><td>Terminal interrupt (ANSI)</td></tr>
-<tr><td><code>SIGQUIT</code></td><td>3</td><td>Terminal quit (POSIX)</td></tr>
-<tr><td><code>SIGILL</code></td><td>4</td><td>Illegal instruction (ANSI)</td></tr>
-<tr><td><code>SIGTRAP</code></td><td>5</td><td>Trace trap (POSIX)</td></tr>
-<tr><td><code>SIGIOT</code></td><td>6</td><td>IOT Trap (4.2 BSD)</td></tr>
-<tr><td><code>SIGBUS</code></td><td>7</td><td>BUS error (4.2 BSD)</td></tr>
-<tr><td><code>SIGFPE</code></td><td>8</td><td>Floating point exception (ANSI)</td></tr>
-<tr><td><code>SIGKILL</code></td><td>9</td><td>Kill(can't be caught or ignored) (POSIX)</td></tr>
-<tr><td><code>SIGUSR1</code></td><td>10</td><td>User defined signal 1 (POSIX)</td></tr>
-<tr><td><code>SIGSEGV</code></td><td>11</td><td>Invalid memory segment access (ANSI)</td></tr>
-<tr><td><code>SIGUSR2</code></td><td>12</td><td>User defined signal 2 (POSIX)</td></tr>
-<tr><td><code>SIGPIPE</code></td><td>13</td><td>Write on a pipe with no reader, Broken pipe (POSIX)</td></tr>
-<tr><td><code>SIGALRM</code></td><td>14</td><td>Alarm clock (POSIX)</td></tr>
-<tr><td><code>SIGTERM</code></td><td>15</td><td>Termination (ANSI)</td></tr>
-<tr><td><code>SIGSTKFLT</code></td><td>16</td><td>Stack fault</td></tr>
-<tr><td><code>SIGCHLD</code></td><td>17</td><td>Child process has stopped or exited, changed (POSIX)</td></tr>
-<tr><td><code>SIGCONT</code></td><td>18</td><td>Continue executing, if stopped (POSIX)</td></tr>
-<tr><td><code>SIGSTOP</code></td><td>19</td><td>Stop executing(can't be caught or ignored) (POSIX)</td></tr>
-<tr><td><code>SIGTSTP</code></td><td>20</td><td>Terminal stop signal (POSIX)</td></tr>
-<tr><td><code>SIGTTIN</code></td><td>21</td><td>Background process trying to read, from TTY (POSIX)</td></tr>
-<tr><td><code>SIGTTOU</code></td><td>22</td><td>Background process trying to write, to TTY (POSIX)</td></tr>
-<tr><td><code>SIGURG</code></td><td>23</td><td>Urgent condition on socket (4.2 BSD)</td></tr>
-<tr><td><code>SIGXCPU</code></td><td>24</td><td>CPU limit exceeded (4.2 BSD)</td></tr>
-<tr><td><code>SIGXFSZ</code></td><td>25</td><td>File size limit exceeded (4.2 BSD)</td></tr>
-<tr><td><code>SIGVTALRM</code></td><td>26</td><td>Virtual alarm clock (4.2 BSD)</td></tr>
-<tr><td><code>SIGPROF</code></td><td>27</td><td>Profiling alarm clock (4.2 BSD)</td></tr>
-<tr><td><code>SIGWINCH</code></td><td>28</td><td>Window size change (4.3 BSD, Sun)</td></tr>
-<tr><td><code>SIGIO</code></td><td>29</td><td>I/O now possible (4.2 BSD)</td></tr>
-<tr><td><code>SIGPWR</code></td><td>30</td><td>Power failure restart (System V)</td></tr>
-</tbody></table>
 
                     </main>
 
