deploy: e983afe7e476d5e58eb4a7212818463703376154

--- a/Bash/Bash_Scripting.html
+++ b/Bash/Bash_Scripting.html
@@ -198,7 +198,7 @@
 <li>Write out <code>ctrl+x</code> </li>
 <li>Modify the file's mode bits so that it becomes an executable 
 <pre><code class="language-sh">$ ls -l
-$ chomd +x script.sh
+$ chmod +x script.sh
 $ ls -l
 </code></pre>
 <ul>
