deploy: 70f1e6ead9ba72866da4afde68b4b32cad0cf91f

--- a/Bash/Bash_Scripting.html
+++ b/Bash/Bash_Scripting.html
@@ -432,7 +432,7 @@ Username: sb1501 echo Age: nonyabusiness echo Full Name: Seb Blair
 if [[ $# -gt 6 ]];then
    echo -e &quot;Too many arguments supplied:\n$#&quot;
    exit 1
-elif [[ $# == 0 ]]; 
+elif [[ $# == 0 ]]; then
    echo -e &quot;Not enough arguments supplied:\n$#&quot;
    exit 1
 fi
