deploy: 71953dbd6a8258a787b60429f8b620522a534cb7

--- a/Redirection/Redirection.html
+++ b/Redirection/Redirection.html
@@ -315,7 +315,7 @@ Character Devices (<code>c</code>) which are devices which transfer data in char
 1
 </code></pre>
 <p>You can combine the input and output redirection operators as shown below.</p>
-<pre><code class="language-sh">wc -l &lt; uname.txt &amp;&gt; wc.op
+<pre><code class="language-sh">wc -l &lt; uname.log &amp;&gt; wc.op
 </code></pre>
 <p><strong>Output:</strong></p>
 <pre><code class="language-sh">$ cat wc.op 
